--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,9 @@ bind r source-file ~/.tmux.conf
 # Set s as leader key instead of default b
 set -g prefix C-s
 
+# Vi mode
+set-window-option -g mode-keys vi
+
 # Enable mouse can be used to resize
 set -g mouse on
 
