Changed tmux leader to a. Renamed to tmux.conf in git. Fixes in readme.

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,8 +2,8 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
-# Set s as leader key instead of default b
-set -g prefix C-s
+# Set a as leader key instead of default b
+set -g prefix C-a
 
 # Vi mode
 set-window-option -g mode-keys vi
